# vkcpp-gen

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
fonts/: poppins.cpp
load/: source_device.hpp  source_instance.hpp  source_libraryloader.hpp
shaders/: ps.frag  vs.vert
src/: ArgumentsParser.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Enums.cpp  Enums.h  Enums.hpp  FileHandle.hpp  Format.hpp  Generator.cpp  Generator.hpp  Gui.cpp  Gui.hpp  Members.cpp  Members.hpp  Output.cpp  Output.hpp  Registry.cpp  Registry.hpp  StringOutput.cpp  StringOutput.hpp  StringUtils.hpp  Utils.cpp  Utils.hpp  Variable.cpp  Variable.hpp  XMLUtils.hpp  XMLVariableParser.cpp  XMLVariableParser.hpp  main.cpp
src/tinyxml2/: CMakeLists.txt
